feat(TG-11): Set up dynamic homepage using React and Node.js